--- a/mydeck/index.html
+++ b/mydeck/index.html
@@ -51,7 +51,7 @@
 
 <p>Packages are used for interactivity in the application plotly and ggplot2.</p>
 
-<p>You can download the shiny application for this repository and run it from you R-Studio using <a href="https://github.com/s7391p/">https://github.com/s7391p/</a></p>
+<p>You can download the shiny application for this repository and run it from you R-Studio using <a href="https://github.com/p7391s/Developing_Data_Products">https://github.com/p7391s/Developing_Data_Products</a></p>
 
 </section>
 <section class='' data-state='' id='slide-4'>
